--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,6 @@
 </head>
 <body class="hold-transition sidebar-mini">
     <div class="wrapper">
-        <!-- Navbar -->
         <nav class="main-header navbar navbar-expand navbar-white navbar-light">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -20,26 +19,9 @@
                 </li>
             </ul>
         </nav>
-        <!-- Sidebar -->
-        <aside class="main-sidebar sidebar-dark-primary elevation-4">
-            <a href="/" class="brand-link">
-                <span class="brand-text font-weight-light">Admin Panel</span>
-            </a>
-            <div class="sidebar">
-                <nav class="mt-2">
-                    <ul class="nav nav-pills nav-sidebar flex-column">
-                        <li class="nav-item">
-                            <a href="/" class="nav-link">
-                                <i class="nav-icon fas fa-tachometer-alt"></i>
-                                <p>Dashboard</p>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </aside>
 
-        <!-- Content -->
+        <% include partials/sidebar.ejs %>
+
         <div class="content-wrapper">
             <section class="content">
                 <div class="container-fluid">
@@ -70,7 +52,6 @@
         </div>
     </div>
 
-    <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/dist/js/adminlte.min.js"></script>
     <script>
